# kursovaya_3

./: README.md  pyproject.toml
src/: functions.py  main.py
tests/: test_functions.py  test_main.py  tests_functions.py  tests_main.py
